.provarCaches/00Df2000001KKNJEA4/objects/LiveText__Conversation_Header__c.object
<CustomObject>
    <description>LiveMessage Session</description>
    <fields>
        <fullName>LiveText__AcceptedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who accepted the conversation.</description>
        <label>Accepted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Text_Session_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Activated_Time__c</fullName>
        <label>Activated Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveText__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Channel_Type__c</fullName>
        <formula>LiveText__Support_Number__r.LiveText__Channel_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__ConversationReopened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether conversation is re-opened or not? Set to False by default.</description>
        <label>ConversationReopened?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__ConversationType__c</fullName>
        <label>ConversationType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Conversation_Identifier__c</fullName>
        <description>Conversation Unique Identifier</description>
        <label>Conversation Identifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__ElapsedTime__c</fullName>
        <description>Calculates elapsed time since record creation.</description>
        <formula>floor((NOW() -  LiveText__SessionReopenedTime__c)* 1440*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ElapsedTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__End_Chat_Message__c</fullName>
        <formula>LiveText__Support_Number__r.LiveText__Chat_End_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Chat Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__EndedTime__c</fullName>
        <description>The time that a LiveMessage session was ended</description>
        <inlineHelpText>Records the time that a text session was ended</inlineHelpText>
        <label>Ended Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveText__Formatted_Originating_Number_To_Display__c</fullName>
        <description>Formatted Originating Number for international numbers using google js lib</description>
        <label>Recipient Label To Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Formatted_Originating_Number__c</fullName>
        <formula>IF((LEN(LiveText__Formatted_Originating_Number_To_Display__c) = 0 || LiveText__Formatted_Originating_Number_To_Display__c = null),  LiveText__Originating_Number__c, LiveText__Formatted_Originating_Number_To_Display__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Formatted_Transcript_1__c</fullName>
        <description>Formatted version of the transcript summary 1 field</description>
        <label>Transcript 1</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LiveText__Formatted_Transcript_2__c</fullName>
        <description>Formatted version of the transcript summary 2 field</description>
        <label>Transcript 2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LiveText__HandleTime__c</fullName>
        <formula>floor((  LiveText__EndedTime__c   -   CreatedDate )* 1440*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HandleTime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__HandledBy__c</fullName>
        <formula>IF(LiveText__AcceptedBy__c=&quot;&quot;,
        IF(OR(ISPICKVAL(LiveText__Status__c,&apos;Active&apos;), ISPICKVAL(LiveText__Status__c, &apos;Ended&apos;)), (LastModifiedBy.FirstName + &quot; &quot; +   LastModifiedBy.LastName)  , null),
        (LiveText__AcceptedBy__r.FirstName + &quot; &quot; + LiveText__AcceptedBy__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HandledBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Alaska_Standard_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Alaska Standard Time (AKST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 9/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Alaska Standard Time (AKST) time zone.</inlineHelpText>
        <label>Hour (Alaska Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Central_Daylight_Savings_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Central Daylight Savings Time (CDT) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 5/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Central Daylight Savings Time (CDT) time zone.</inlineHelpText>
        <label>Hour (Central Daylight Savings Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Central_Standard_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Central Standard Time (CST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 6/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Central Standard Time (CST) time zone.</inlineHelpText>
        <label>Hour (Central Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Eastern_Daylight_Savings_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Eastern Daylight Savings Time (EDT) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 4/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Eastern Daylight Savings Time (EDT) time zone.</inlineHelpText>
        <label>Hour (Eastern Daylight Savings Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Eastern_Standard_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Eastern Standard Time (EST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 5/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Eastern Standard Time (EST) time zone.</inlineHelpText>
        <label>Hour (Eastern Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Hawaii_Standard_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Hawaii Standard Time (HST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 10/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Hawaii Standard Time (HST) time zone.</inlineHelpText>
        <label>Hour (Hawaii Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Mountain_Daylight_Savings_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Mountain Daylight Savings Time (MDT) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 6/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Mountain Daylight Savings Time (MDT) time zone.</inlineHelpText>
        <label>Hour (Mountain Daylight Savings Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Mountain_Standard_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Mountain Standard Time (MST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 7/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Mountain Standard Time (MST) time zone.</inlineHelpText>
        <label>Hour (Mountain Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Pacific_Daylight_Savings_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Pacific Daylight Savings Time (PDT) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 7/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Pacific Daylight Savings Time (PDT) time zone.</inlineHelpText>
        <label>Hour (Pacific Daylight Savings Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Hour_Pacific_Standard_Time__c</fullName>
        <description>Displays the hour a LiveMessage session was created for the Pacific Standard Time (PST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 8/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a LiveMessage session was created for the Pacific Standard Time (PST) time zone.</inlineHelpText>
        <label>Hour (Pacific Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead lookup</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__LiveTextPhoneNumberLabel__c</fullName>
        <formula>LiveText__Support_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__LiveText_Number__c</fullName>
        <formula>IF(LiveText__Support_Number__r.LiveText__Channel_Type__c==&apos;Text&apos;, LiveText__Support_Number__r.LiveText__Formatted_Support_Number__c, IF(LiveText__Support_Number__r.LiveText__Channel_Type__c==&apos;Facebook&apos;, &apos;Facebook Messenger&apos;, LiveText__Support_Number__r.LiveText__Channel_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number / Channel ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__MO_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Mobile Originate (MO) Message Count (Inbound messages)</description>
        <label>Mobile Originate (MO) Message Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__MT_Automated_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Mobile Terminate (MT) Message Count - Automated outbound messages (ITR Messages and auto-messages configured in the LM admin)</description>
        <label>Mobile Terminate (MT) Automated Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__MT_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Mobile Terminate (MT) Message Count (Outbound messages)</description>
        <label>Mobile Terminate (MT) Message Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__MessagePreview__c</fullName>
        <label>MessagePreview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Offline_Hours_Message__c</fullName>
        <formula>LiveText__Support_Number__r.LiveText__Offline_Hours_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offline Hours Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Originating_Number__c</fullName>
        <label>Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Server_Instance__c</fullName>
        <formula>MID( $Api.Enterprise_Server_URL_310, 9, 18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Server Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__SessionReopenedTime__c</fullName>
        <description>Records the time that a LiveMessage session is re-opened</description>
        <inlineHelpText>Records the time that a text session is re-opened</inlineHelpText>
        <label>SessionReopenedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveText__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveText__Support_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipName>Conversation_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Thumbnail_Photo_Url__c</fullName>
        <description>Stores the Url of the thumb profile pic of the person messaging in.</description>
        <label>Thumbnail Photo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LiveText__TimeDifference__c</fullName>
        <description>Time Difference, in days, between current time and CreatedDate of record.</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeDifference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__TimeDiffrence__c</fullName>
        <description>&quot;Time Difference between
current time and CreatedDate of record.
Difference calculated in days.&quot;</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeDiffrence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Total_Message_Count__c</fullName>
        <formula>LiveText__MO_Count__c + LiveText__MT_Count__c + LiveText__MT_Automated_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Message Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Transcript_Summary_1__c</fullName>
        <label>Transcript Summary1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__Transcript_Summary_2__c</fullName>
        <label>Transcript Summary2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__UnNormalized_LiveText_Number__c</fullName>
        <formula>IF(LEN(LiveText__LiveText_Number__c )&gt;9,MID(LiveText__LiveText_Number__c,3,15),LiveText__LiveText_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Un-normalized Phone Number / Channel ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__UnNormalized_Orginating_Number__c</fullName>
        <formula>MID(LiveText__Formatted_Originating_Number__c,3,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Un-normalized Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__isAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if agent accepts record.</description>
        <label>isAccepted</label>
        <type>Checkbox</type>
    </fields>
    <label>LiveMessage Session</label>
    <listViews>
        <fullName>LiveText__All_Text_Sessions</fullName>
        <columns>NAME</columns>
        <columns>LiveText__Originating_Number__c</columns>
        <columns>LiveText__LiveText_Number__c</columns>
        <columns>LiveText__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Text Sessions</label>
    </listViews>
    <listViews>
        <fullName>LiveText__My_Active_Text_Sessions</fullName>
        <columns>NAME</columns>
        <columns>LiveText__Originating_Number__c</columns>
        <columns>LiveText__LiveText_Number__c</columns>
        <columns>LiveText__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LiveText__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Text Sessions</label>
    </listViews>
    <listViews>
        <fullName>LiveText__My_Ended_Text_Sessions</fullName>
        <columns>NAME</columns>
        <columns>LiveText__Originating_Number__c</columns>
        <columns>LiveText__LiveText_Number__c</columns>
        <columns>LiveText__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LiveText__Status__c</field>
            <operation>equals</operation>
            <value>Ended</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LiveText__Conversation_Header__c.LiveText__Ended_Text_Sessions</value>
        </filters>
        <label>My Ended Text Sessions</label>
    </listViews>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>LiveMessage Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveMessage Sessions</pluralLabel>
    <recordTypes>
        <fullName>LiveText__Ended_Text_Sessions</fullName>
        <active>true</active>
        <description>Record to be displayed for ended chats.</description>
        <label>Ended Text Sessions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>